--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -73,4 +64,48 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+}
+
+.animation-cluster {
+    backface-visibility: hidden;
+}
+
+.animation-in-left {
+    animation:  moveInLeft 1s ease-in-out;
+}
+
+.animation-in-right {
+    animation:  moveInRight 1s ease-in-out;
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    50% {
+        transform: translateX(5px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    50% {
+        transform: translateX(-5px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
 }
